Remove unneeded 'Intro' header
Also: grammar fix

--- a/src/posts/Shell-Tricks.org
+++ b/src/posts/Shell-Tricks.org
@@ -1,11 +1,10 @@
-* Intro
-  Here are some ways to speed up your shell use and make using a terminal more
-  enjoyable. Depending on what you're working on, your mileage may vary, so
-  change and adapt this stuff until you're comfortable.
+Here are some ways to speed up your shell use and make using a terminal more
+enjoyable. Depending on what you're working on, your mileage may vary, so change
+and adapt this stuff until you're comfortable.
 
-  Usually when you open up a terminal, you're using [[https://www.gnu.org/software/bash/][Bash]], but you may also be
-  using [[http://www.zsh.org/][Zsh]]. You can pick one or the other (see [[http://linuxcommand.org/man_pages/chsh1.html][chsh]] for more info). To figure
-  out which one you're using, open up a terminal and run:
+Usually when you open up a terminal, you're using [[https://www.gnu.org/software/bash/][Bash]], but you may also be
+using [[http://www.zsh.org/][Zsh]]. You can pick one or the other (see [[http://linuxcommand.org/man_pages/chsh1.html][chsh]] for more info). To figure out
+which one you're using, open up a terminal and run:
 #+BEGIN_SRC sh
 echo $SHELL
 #+END_SRC
@@ -163,7 +162,7 @@ alias u='sudo softwareupdate --download --install --all && brew update && brew u
      your OS's [[https://www.archlinux.org/pacman/][package manager]] right from the terminal
      - You may be able to search for existing binaries/commands using something
        like [[https://www.archlinux.org/packages/extra/x86_64/pkgfile/][pkgfile]]
-** Is what I'm about to alias destructive in any way? Can it's effects be reversed?
+** Is what I'm about to alias destructive in any way? Can its effects be reversed?
    Be aware that making destructive commands easier to type means you'll be
    typing them faster, maybe even without thinking. If you were to accidentally
    run whatever it is you're about to alias (for instance you might alias =rm
